--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,9 +3,11 @@ footer {
   position: fixed;
   bottom: 0;
   height: 55px;
-  color: black;
+  color: rgba(32, 52, 70, 0.372);
   background-color: lavender;
   text-align: center;
+  font-family: 'Heebo', sans-serif;
+  font-size: 25px;
 
 }
 
@@ -13,6 +15,10 @@ body {
     color: black;
     background-image: url("../images/background-image.jpg");
     background-position: center;
+    height: 100%;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
     /* background-color: hotpink; */
 }
 
